# slosh

./: LICENSE  README.md  pyproject.toml
src/slosh/: main.py
